--- a/index.html
+++ b/index.html
@@ -19,23 +19,34 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gluten:wght@600&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Gluten:wght@600&display=swap" rel="stylesheet">
 
 </head>
 
 <body>
+  <!-- for image and navbar -->
   <section id="title">
 
+    <!-- for responsive pages -->
     <div class="container-fluid">
+
+      <!-- logo -->
       <div class="title-image">
         <img class="title-image"src="images/logos/header-logo.png" alt="">
       </div>
+
+      <!-- navbar area -->
+
+      <!-- whole navbar black background -->
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <!-- zetsful main turning page link -->
         <a class="navbar-brand" href="index.html">Zetsful</a>
+        <!-- collapse navbar icon button 3 line button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+        <!-- collapse dropdown menu -->
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
@@ -47,7 +58,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#footer">Contact</a>
             </li>
+
             <li class="nav-item dropdown">
+              <!-- //recipes dropdown menu -->
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Recipes
               </a>
@@ -60,7 +73,9 @@
                 <a class="dropdown-item" href="greek.html">GREEK</a>
               </div>
             </li>
+            <!-- //search area -->
             <li class="nav-item-search">
+
               <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button type="submit" class="btn btn-outline-success">Search</button>
@@ -80,9 +95,12 @@
 
   <section id="slide-section">
 
+    <!-- //whole pink area -->
     <div id="carouselExampleControls" class="carousel slide" data-ride="false">
+      <!-- //same pink area with features -->
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <!-- //first image -->
           <img src="images/image-1.jpg" class="slide-image " alt="...">
         </div>
         <div class="carousel-item">
@@ -92,10 +110,13 @@
           <img src="images/image-3.jpg" class="slide-image " alt="...">
         </div>
       </div>
+
+      <!-- //previous button -->
       <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
       </button>
+      <!-- //next button -->
       <button class="carousel-control-next" type="button" data-target="#carouselExampleControls" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
@@ -109,24 +130,31 @@
 
 
   <section id="features">
-
+    <!-- font awesome icon -->
     <h1><i class="fas fa-utensils"></i><br>Delicious Cuisines</h1>
     <!-- FIRST IMAGE -->
+    <!-- whole card area -->
     <div class="row">
-
+      <!-- //whole sing card -->
       <div class="pricing-column col-lg-4 col-md-6" href="chinese.html">
+        <!-- whole single card working area -->
         <div class="card">
+          <!-- top with image -->
           <div class="card-body">
             <img src="images/card-image/c1.jpg" alt="">
+
           </div>
+          <!-- //back side of the card -->
           <div class="flip-card-back card-body ">
             <img src="images/card-image/c1.jpg" alt="">
+            <!-- top country logo -->
             <div class="country-picture">
               <img src="images/country-img/china.png" alt="">
             </div>
+            <!-- //texts and buttons -->
             <div class="text-block">
               <h2>CHINESE</h2>
-              <p>Time For A Chinese Food</p>
+              <p>Chinese Time</p>
             <button type="button" class="btn btn-primary btn-lg btn-space"><a href="chinese.html">More</a></button>
             </div>
           </div>
@@ -244,7 +272,7 @@
 
 <footer id="footer">
   <div class="cta">
-    <h3 class="cta-heading">Find Your Favorite Cusine Today.</h3>
+    <h3 class="cta-heading">Find Your Favorite Cuisine Today.</h3>
         <button type="button" class="btn btn-dark btn-lg download-button "> <i class="fab fa-apple"></i> Download</button>
         <button type="button" class="btn btn-light btn-lg download-button"> <i class="fab fa-google-play"></i> Download</button>
   </div>
